Adding picture via admin.

--- a/oth templates/level.html
+++ b/oth templates/level.html
@@ -134,8 +134,9 @@
 	  		</div> 
 	  		
             <div class="column_middle">
+		<p>d<p/>
             	<div class="column_right_grid" id="compt_image">
-            		<img src="/static/img/{{photo}}" />
+            		{%media photo%}<!--<img src="/media/images/{{photo}}" /-->
             	</div>
               	<div class="column_right_grid qstn">
                  <div class="newsletter">
